# rust_webdds_client

./: Cargo.toml  README.md  put_request.sh
SensorStatus/: db  snap.000000000001B38F
src/: main.rs
