[package]
name = "rust_webdds_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
moka = { version = "0.12.8", features = ["future", "sync"] }
rustdds = "0.10.1"
serde = "1.0.204"
serde_json = "1.0.120"
sled = "0.34.7"
tokio = {version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing-subscriber = "0.3.18"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
